[gd_scene load_steps=2 format=3 uid="uid://cvl5g1cdvia4i"]

[ext_resource type="Script" path="res://start_menu/start_menu.gd" id="1_ykrm6"]

[node name="StartMenu" type="Node2D"]
script = ExtResource("1_ykrm6")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2

[node name="PlayGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play game"

[node name="LoginButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Log in (for highscores)"

[node name="LeaderboardButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Highscores"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2

[node name="ScoreContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
